[UI Revamp] Make sure that there's not too much gap between the hero and the form

--- a/src/styles/sidepanel.css
+++ b/src/styles/sidepanel.css
@@ -574,7 +574,7 @@ body {
 
 .auth-hero {
   max-width: 360px;
-  height: 25vh;
+  height: 50%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
